--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.joshflash.ponylangplugin
-pluginName = PonylangPlugin
+pluginName = Pony Language Plugin
 pluginRepositoryUrl = https://github.com/JoshFlash/PonylangPlugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
