--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,10 +6,10 @@
 
     <depends>com.intellij.modules.platform</depends>
 
-    <resource-bundle>messages.MyBundle</resource-bundle>
+    <resource-bundle>messages.PonylangPluginBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.joshflash.ponylangplugin.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <toolWindow factoryClass="com.github.joshflash.ponylangplugin.toolWindow.CorralToolWindowFactory" id="CorralToolWindow"/>
         <postStartupActivity implementation="com.github.joshflash.ponylangplugin.listeners.PonylangStartupActivity" />
         <fileType
                 name="Pony"
